# botnuc

./: .gitattributes  README.md
config/: lino_base_config.h
install/: local_setup.sh  setup.sh
install/behavior_tree/lib/behavior_tree/: General_controller.py  capture_flag_node.py  electromagnet_node.py
install/behavior_tree/share/behavior_tree/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_detection/lib/camera_detection/: camera_detection_node.py
install/camera_detection/share/camera_detection/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/linorobot2/share/linorobot2/: package.sh
install/linorobot2_base/share/linorobot2_base/: local_setup.sh  package.sh
install/linorobot2_bringup/share/linorobot2_bringup/: local_setup.sh  package.sh
install/linorobot2_description/share/linorobot2_description/: package.sh
install/linorobot2_navigation/share/linorobot2_navigation/: local_setup.sh  package.sh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
install/micro_ros_msgs/share/micro_ros_msgs/: package.sh
install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
log/: latest_build
src/behavior_tree/: CMakeLists.txt
src/behavior_tree/src/: ApproachFlagController.py  SearchFlag.py  navigate_to_flag.py
src/camera_detection/: CMakeLists.txt
src/camera_detection/src/: flag_point_node.py  flag_position_node.py
(+26 files in other folders)
